--- a/_posts/2016-03-29-java.md
+++ b/_posts/2016-03-29-java.md
@@ -1,23 +1,24 @@
 ---
-layout:     post
-title:      "Java基础学习笔记"
-subtitle:   "读书笔记"
-date:       2016-04-05
-author:     "fallenworld"
+layout: post
+title: Java基础学习笔记
+subtitle: 读书笔记
+date: {}
+author: fallenworld
 tags:
-    - java
+  - java
+published: true
 ---
 
 
 因为感觉自己java语法基础实在是很拙计，于是决定最近补一补java，使用的书籍是《java核心技术卷一 基础知识》和《Java编程思想》。下面是我学习的过程中一些之前不知道或者掌握不太扎实的Java知识点，记录在这里，做一个知识记录。
 
-## 概论 ##
+## 概论
 
 - 编译时一个类会编译成一个.class，而非一个文件编译为一个.class
 - javac编译，java解释，javah头文件生成， jdb调试，javadoc文档生成，javap反汇编
 - jar文件实质就是zip文件，用文件夹目录来表示包名
 
-## 基础语法 ##
+## 基础语法
 
 **数据类型**
 
@@ -58,7 +59,7 @@ tags:
 - 数组长度可以为0，和null不同，可以用于函数在异常情况下返回
 - Arrays.toString转为字符串，Arrays.sort快排，Arrays.copyOf拷贝数组，Arrays.fill元素填充，Arrays.binarySearch二分查，Arrays.equals判断相等
 
-## 面向对象 ##
+## 面向对象
 **对象概论**
 
 - 所有对象变量都是引用
@@ -147,7 +148,6 @@ tags:
 
 **代理**
 
-## 第11章 异常处理 ##
 **异常**
 
 - Error：java内部错误，RuntimeException：空指针数组越界等，IOException：其它异常
