--- a/_posts/2016-06-19-C++.md
+++ b/_posts/2016-06-19-C++.md
@@ -1,22 +1,23 @@
 ---
-layout:     post
-title:      "C++基础学习笔记"
-subtitle:   "读书笔记"
-date:       2016-04-05
-author:     "fallenworld"
+layout: post
+title: C++基础学习笔记
+subtitle: 读书笔记
+date: {}
+author: fallenworld
 tags:
-    - C/C++
+  - C/C++
+published: true
 ---
 
 
 
-# 第一部分 C语言面向过程 #
+## 第一部分 C语言面向过程
 
-# 第二部分 面向对象 #
+## 第二部分 面向对象
 
-## 一、初始化和释放 ##
+### 一、初始化和释放
 
-### 初始化 ###
+初始化
 
 - 若未定义构造函数，则会有默认无参构造函数，该构造函数对类对象成员调用默认无参构造函数
 - 子类构造函数成员初始化列表中应调用基类构造函数（只能调用直接基类的）。先执行基类构造函数，后执行子类构造函数
@@ -28,43 +29,43 @@ tags:
 - 初始化顺序：类内初始化->成员初始化列表->构造函数（后面的会覆盖前面的）
 - 对象数组：List list[2]= {List(3), List()};，先用默认构造函数创建对象，然后用给出的构造函数创建临时对象，接着把临时对象复制过去
 
-### 释放 ###
+释放
 
 - 若未定义析构函数，则会有默认析构函数（该析构函数什么都不干）
 - 析构函数应定义为虚函数。顺序是先执行子类析构函数，后执行基类析构函数
 - delete数组时应写为delete[]
 - delete不能释放定位new分配的内存，应当显式调用析构函数 
 
-## 二、继承 ##
+### 二、继承
 
-### 继承方式和访问权限 ###
+继承方式和访问权限
 
 - 不指定继承方式，默认private继承
 - private继承：公有和保护成员变为私有
 - protected继承：公有和保护成员变为保护
 - using xxx;重新定义基类成员的访问权限，可以通过这个using声明使得子类可以继承基类的构造函数
 
-### 多重继承 ###
+多重继承
 
 - 虚基类：子类构造函数可以跨层调用虚基类构造函数。不能通过中间类调用虚基类构造函数（此时中间类所调用的基类构造函数不会被调用，而是会调用基类默认无参构造函数）
 - 基类有同名成员：通过类名来区别。二义性和访问权限无关。
 - 同名成员优先级：子类的优先于基类
 
-## 三、友元 ##
+### 三、友元
 
 - 类定义中把一个函数声明为friend，该函数定义按其原本定义即可
 - 其他类的成员函数可作为友元函数，此时该类必须在这个友元函数声明之前被定义
 - 友元类：friend class XXX;
 
-## 四、运算符重载 ##
+### 四、运算符重载 ##
 
-### 重载 ###
+重载
 
 - 至少一个操作数是用户自定类型
 - =, (), [], -> 只能通过成员函数重载
 - operator++()：前缀，operator++(int)后缀
 
-### 特殊函数 ###
+特殊函数
   
 - 复制构造函数：初始化、按值传参、创建临时对象,赋值运算符：赋值
 - 子类若未定义复制构造函数/赋值运算符，则默认的复制构造函数/赋值运算符对于基类成员将调用基类的复制构造函数/赋值运算符来完成复制
@@ -73,33 +74,33 @@ tags:
 - explicit防止隐式转换
 - ()运算符：函数对象 
 
-# 第三部分 标准库 #
+## 第三部分 标准库
 
-## 一、容器 ##
+### 一、容器
 
-### 迭代器 ###
+迭代器
 
 - 迭代器类型：输入/输出迭代器->正向迭代器->双向迭代器->随机迭代器，这些类型称作concept，不是具体声明的类，concept的具体实现 称作model（如指针是随机迭代器的model），继承一个concept被称作refinement（如随机迭代器改进了双向迭代器的功能）
 - 输入输出流迭代器：ostream\_iterator,istream\_iterator
 - 反向迭代器：reverse_iterator，*iter的值是上一个元素的值
 - 插入迭代器：back\_insert\_interator, front\_insert\_iterator, insert_iterator
 
-### 基本容器 ###
+基本容器
 
 - 容器可以通过模版参数指定用于管理内存的内存分配类
 - 基本容器操作：X::value_type元素类型，X::iterator迭代器，a.swap(b)交换两个容器内容，a==b两个容器相等，(&a)->~X()对每个元素调用析构函数
 
-### 序列容器 ###
+序列容器
 
 - 序列容器操作：a.insert通过迭代器插入，a.erase通过迭代器删除，a.clear清空容器，X(n, element)构造n个element的容器
 - 序列容器包括vector,list,forward\_list,stack,deque,queue,priority_queue
 - list专有的函数:a.merge(b)合并(合并前两个链表必须已排序)，remove删除某个值的所有元素，sort排序(nlogn)，splice将另一个链表插入，unique合并相邻的相同元素
 
-### 关联容器 ###
+关联容器
 
 - 关联容器包括map,multimap,set,multiset,unordered\_map,unordered\_multimap,unordered\_set,unordered\_multiset,
 - 普通关联容器是基于树实现，unordered的是基于哈希表实现
 
 (未完待续)
 
-# 第四部分 模版元编程 #
+## 第四部分 模版元编程
