--- a/_posts/2016-06-19-C++.md
+++ b/_posts/2016-06-19-C++.md
@@ -4,9 +4,11 @@ title: C++基础学习笔记
 author: fallenworld
 categories: c/c++
 tags: c/c++
+published: true
 ---
 
-
+* content
+{:toc}
 
 ## 第一部分 C语言面向过程
 
