--- a/_posts/2016-03-29-java.md
+++ b/_posts/2016-03-29-java.md
@@ -4,8 +4,11 @@ title: Java基础学习笔记
 author: fallenworld
 categories: java
 tags: java
+published: true
 ---
 
+* content
+{:toc}
 
 因为感觉自己java语法基础实在是很拙计，于是决定最近补一补java，使用的书籍是《java核心技术卷一 基础知识》和《Java编程思想》。下面是我学习的过程中一些之前不知道或者掌握不太扎实的Java知识点，记录在这里，做一个知识记录。
 
