--- a/_posts/2016-03-29-java.md
+++ b/_posts/2016-03-29-java.md
@@ -20,7 +20,7 @@ published: true
 
 ## 基础语法
 
-**数据类型**
+#### 数据类型
 
  - 0b1101\_0010\_1101二进制常量(Java7新增)，下划线用来增加可读性
  - java数据类型所占据空间大小和CPU位数无关，int永远32位，long永远64位
@@ -29,20 +29,20 @@ published: true
  - 高精度整数BigInteger，高精度浮点数BigDecimal
  - 14.5e6表示十进制科学计数法：1.45*10^7
 
-**运算符**
+#### 运算符
 
  - 移位运算符只能用来处理整数类型
  - 对char,byte,short移位会先转为int再移位，并且最终返回int
  - \>\>\>0逻辑右移，\>\>算术右移
  - 逻辑运算会短路运算
 
-**控制流程**
+#### 控制流程
 
 - 不像C/C++，不能在子块中定义和父块同名变量
 - 没有goto，但是可以用带标签的break（可在任何块中使用）
 - for循环的初始化和步进部分可以用逗号操作符（执行多个语句，定义多个变量）
 
-**字符串**
+#### 字符串
 
 - char是2字节的Unicode字符，String是char序列
 - String中可能得用多个char来代表一个字符
@@ -51,7 +51,7 @@ published: true
 - compareTo比较字典顺序，indexOf查找子串，trim删除头尾空格，replace替换
 - new String(“x”)一定会创建新的字符串对象，无论”x”是否在字符串常量池中
 
-**数组**
+#### 数组
 
 - int[] a = new int[100];
 - int[] a = {0, 1, 2, 3};  //相当于new int[4]
@@ -60,7 +60,7 @@ published: true
 - Arrays.toString转为字符串，Arrays.sort快排，Arrays.copyOf拷贝数组，Arrays.fill元素填充，Arrays.binarySearch二分查，Arrays.equals判断相等
 
 ## 面向对象
-**对象概论**
+#### 对象概论
 
 - 所有对象变量都是引用
 - Java虚拟机会自己决定是否把函数变为内联函数
@@ -68,7 +68,7 @@ published: true
 - 可变参数类型相当于数组，调用函数时会自动new一个数组传给实参
 - final变量只能进行一次赋值（不一定要初始化）
 
-**初始化和释放**
+#### 初始化和释放
 
 - 和C++一样，如果没定义构造器，则会默认有一个无参构造器；但如果定义了构造器，就不会提供默认无参构造器
 - 在构造器中调用另一个构造器：this(...)，只能调用一个且要位于开始处
@@ -78,13 +78,13 @@ published: true
 - 初始化块：类中写语句块来初始化，初始化块在构造函数之前调用。静态初始化块：static
 - finalize方会在对象被垃圾回收之前调用，但注意对象可能不被垃圾回收
 
-**访问控制**
+#### 访问控制
 
 - public类可以被其他包使用，非public类只能被同一个包使用
 - 成员不指定则默认为包可见，注意：包可见与public不同
 - 不像C++，protected成员可以被本包和子类访问
 
-**继承**
+#### 继承
 
 - 和C++一样，子类不能访问父类的私有成员
 - super用于访问父类的成员（和C++的用父类类名不一样）
@@ -97,13 +97,13 @@ published: true
 - 可用instanceof判断某个变量是否是某个类型的类，返回boolean类型，且null返回false
 - abstract类：abstract类不能实例化。abstract类可以包含具体成员和abstract方法，abstract类的子类如果没有实现所有的abstract方法，则这个子类也是abstract类
 
-**接口**
+#### 接口
 
 - 接口中的所有方法自动地为public
 - 接口中的所有变量自动地为public static final
 - 接口可以继承接口
 
-**内部类**
+#### 内部类
 
 - 内部类持有外部类的一个引用：OuterClass.this（编译器给内部类增加一个this%0域）
 - 编译器给内部类默认添加InnerClass(OutterClass outer)构造函数，给其他构造函数添加一个参数
@@ -116,7 +116,7 @@ published: true
 - static内部类与C++中嵌套类类似
 - 接口中的内部类自动成为static public
 
-**Object类**
+#### Object类
 
 - 数组也是Object的子类
 -equals：是否内容相等，==：是否引用相同，Object类的equals：检测引用是否相同。考虑二者可能都为null要用Object.equals(a,b)，建议覆盖equals时满足自反传递对称一致
@@ -124,21 +124,21 @@ published: true
 - toString：+、 print时会自动调用toString，Object类的toString：类名@hashCode
 - clone：对象拷贝，Object类的clone：浅拷贝，并且为protected。
 
-**对象包装器**
+#### 对象包装器
 
 - 有Integer，Double，Void，Boolean，Character ...... 等等
 - 一旦构造了对象包装器之后，就不可以再修改其值
 - String构造Integer：Integer.valueOf(s)，String转int：Integer.parseInt(s)，Integer转String：i.toString()
 - 包装器在运算中会自动转为基本类型（拆箱），基本类型也可自动构造出包装器（拆箱）
 
-**枚举**
+#### 枚举
 
 - 定义枚举实质上是定义了个类，并且这个类继承自Enum类，枚举值即为类的实例变量
 - toString返回枚举值的名字字符串
 - valueOf根据名字字符串返回枚举值的引用
 - EnumClass.values返回枚举数组，ordinal：枚举值在枚举数组中的下标
 
-**反射**
+#### 反射
 
 - 获取Class：obj.getClass()，Class.forName(String)，XXX.Class（Class类可以类比C++的type_info）
 - 相同类型的变量的Class是公共的
@@ -146,9 +146,9 @@ published: true
 - class.get(Declared)Fields/getMethods/getConstructors:获取成员变量/方法/构造器数组
 - mothod/constructor.getParameterTypes:参数类型，method.getReturnType:返回值类型，getModifiers:返回修饰符数值
 
-**代理**
+#### 代理
 
-**异常**
+#### 异常
 
 - Error：java内部错误，RuntimeException：空指针数组越界等，IOException：其它异常
 
