change metadata for post

--- a/_posts/2017-02-05-搭建Android交叉编译环境.md
+++ b/_posts/2017-02-05-搭建Android交叉编译环境.md
@@ -1,7 +1,5 @@
 ---
-published: false
 layout: post
-author: fallenworld
 categories: Android
 tags: c/c++ Android Linux
 ---
@@ -15,7 +13,7 @@ tags: c/c++ Android Linux
 
 但是一般Linux库是通过一个configure脚本来生成MakeFile的方式来构建的，在Linux上构建一个Linux库的一般流程如下：
 
-```
+```bash
 ./configure
 make
 make install
@@ -45,7 +43,7 @@ make install
 
 运行如下命令
 
-```
+```bash
 ./make_standalone_toolchain.py --arch arm --api 21 --install-dir ~/android-build
 ```
 
